# Diabetes-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: Diabetes-Data-Imputed.csv
models/: XGBoost_model.pkl  decision_tree_model.pkl  gradient_boosting_model.pkl  logistic_regression_model.pkl  random_forest_model.pkl
notebooks/: 1_EDA.ipynb  2_data_preprocessing.ipynb  3_classification_models.ipynb  EDA.ipynb
src/: app.py  model.py  streamlit_app.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: test_model.py
