[project]
name = "diabetes-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
    "optuna>=4.5.0",
    "pytest>=8.4.2",
    "flask>=3.1.2",
    "streamlit>=1.50.0",
    "gunicorn>=23.0.0",
]
